// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RawRangeInput expect to render 1`] = `
<form
  className="form"
  onSubmit={[Function]}
>
  <fieldset
    className="fieldset"
  >
    <label
      className="labelMin"
    >
      <input
        className="inputMin"
        disabled={false}
        max={500}
        min={0}
        onChange={[Function]}
        placeholder={0}
        step={1}
        type="number"
      />
    </label>
    <span
      className="separator"
    >
      to
    </span>
    <label
      className="labelMax"
    >
      <input
        className="inputMax"
        disabled={false}
        max={500}
        min={0}
        onChange={[Function]}
        placeholder={500}
        step={1}
        type="number"
      />
    </label>
    <button
      className="submit"
      disabled={false}
      role="button"
    >
      Go
    </button>
  </fieldset>
</form>
`;

exports[`RawRangeInput expect to render with disabled state 1`] = `
<form
  className="form"
  onSubmit={[Function]}
>
  <fieldset
    className="fieldset"
  >
    <label
      className="labelMin"
    >
      <input
        className="inputMin"
        disabled={true}
        max={20}
        min={480}
        onChange={[Function]}
        placeholder={480}
        step={1}
        type="number"
      />
    </label>
    <span
      className="separator"
    >
      to
    </span>
    <label
      className="labelMax"
    >
      <input
        className="inputMax"
        disabled={true}
        max={20}
        min={480}
        onChange={[Function]}
        placeholder={20}
        step={1}
        type="number"
      />
    </label>
    <button
      className="submit"
      disabled={true}
      role="button"
    >
      Go
    </button>
  </fieldset>
</form>
`;

exports[`RawRangeInput expect to render with values 1`] = `
<form
  className="form"
  onSubmit={[Function]}
>
  <fieldset
    className="fieldset"
  >
    <label
      className="labelMin"
    >
      <input
        className="inputMin"
        disabled={false}
        max={500}
        min={0}
        onChange={[Function]}
        placeholder={0}
        step={1}
        type="number"
        value={20}
      />
    </label>
    <span
      className="separator"
    >
      to
    </span>
    <label
      className="labelMax"
    >
      <input
        className="inputMax"
        disabled={false}
        max={500}
        min={0}
        onChange={[Function]}
        placeholder={500}
        step={1}
        type="number"
        value={480}
      />
    </label>
    <button
      className="submit"
      disabled={false}
      role="button"
    >
      Go
    </button>
  </fieldset>
</form>
`;

exports[`RawRangeInput onChange expect to update the state when max change 1`] = `
<form
  className="form"
  onSubmit={[Function]}
>
  <fieldset
    className="fieldset"
  >
    <label
      className="labelMin"
    >
      <input
        className="inputMin"
        disabled={false}
        max={500}
        min={0}
        onChange={[Function]}
        placeholder={0}
        step={1}
        type="number"
      />
    </label>
    <span
      className="separator"
    >
      to
    </span>
    <label
      className="labelMax"
    >
      <input
        className="inputMax"
        disabled={false}
        max={500}
        min={0}
        onChange={[Function]}
        placeholder={500}
        step={1}
        type="number"
        value={480}
      />
    </label>
    <button
      className="submit"
      disabled={false}
      role="button"
    >
      Go
    </button>
  </fieldset>
</form>
`;

exports[`RawRangeInput onChange expect to update the state when min change 1`] = `
<form
  className="form"
  onSubmit={[Function]}
>
  <fieldset
    className="fieldset"
  >
    <label
      className="labelMin"
    >
      <input
        className="inputMin"
        disabled={false}
        max={500}
        min={0}
        onChange={[Function]}
        placeholder={0}
        step={1}
        type="number"
        value={20}
      />
    </label>
    <span
      className="separator"
    >
      to
    </span>
    <label
      className="labelMax"
    >
      <input
        className="inputMax"
        disabled={false}
        max={500}
        min={0}
        onChange={[Function]}
        placeholder={500}
        step={1}
        type="number"
      />
    </label>
    <button
      className="submit"
      disabled={false}
      role="button"
    >
      Go
    </button>
  </fieldset>
</form>
`;

exports[`RawRangeInput willReceiveProps expect to update the empty state from given props 1`] = `
<form
  className="form"
  onSubmit={[Function]}
>
  <fieldset
    className="fieldset"
  >
    <label
      className="labelMin"
    >
      <input
        className="inputMin"
        disabled={false}
        max={500}
        min={0}
        onChange={[Function]}
        placeholder={0}
        step={1}
        type="number"
      />
    </label>
    <span
      className="separator"
    >
      to
    </span>
    <label
      className="labelMax"
    >
      <input
        className="inputMax"
        disabled={false}
        max={500}
        min={0}
        onChange={[Function]}
        placeholder={500}
        step={1}
        type="number"
      />
    </label>
    <button
      className="submit"
      disabled={false}
      role="button"
    >
      Go
    </button>
  </fieldset>
</form>
`;

exports[`RawRangeInput willReceiveProps expect to update the empty state from given props 2`] = `
<form
  className="form"
  onSubmit={[Function]}
>
  <fieldset
    className="fieldset"
  >
    <label
      className="labelMin"
    >
      <input
        className="inputMin"
        disabled={false}
        max={500}
        min={0}
        onChange={[Function]}
        placeholder={0}
        step={1}
        type="number"
      />
    </label>
    <span
      className="separator"
    >
      to
    </span>
    <label
      className="labelMax"
    >
      <input
        className="inputMax"
        disabled={false}
        max={500}
        min={0}
        onChange={[Function]}
        placeholder={500}
        step={1}
        type="number"
      />
    </label>
    <button
      className="submit"
      disabled={false}
      role="button"
    >
      Go
    </button>
  </fieldset>
</form>
`;

exports[`RawRangeInput willReceiveProps expect to update the state from given props 1`] = `
<form
  className="form"
  onSubmit={[Function]}
>
  <fieldset
    className="fieldset"
  >
    <label
      className="labelMin"
    >
      <input
        className="inputMin"
        disabled={false}
        max={500}
        min={0}
        onChange={[Function]}
        placeholder={0}
        step={1}
        type="number"
        value={40}
      />
    </label>
    <span
      className="separator"
    >
      to
    </span>
    <label
      className="labelMax"
    >
      <input
        className="inputMax"
        disabled={false}
        max={500}
        min={0}
        onChange={[Function]}
        placeholder={500}
        step={1}
        type="number"
        value={460}
      />
    </label>
    <button
      className="submit"
      disabled={false}
      role="button"
    >
      Go
    </button>
  </fieldset>
</form>
`;

exports[`RawRangeInput willReceiveProps expect to update the state from given props 2`] = `
<form
  className="form"
  onSubmit={[Function]}
>
  <fieldset
    className="fieldset"
  >
    <label
      className="labelMin"
    >
      <input
        className="inputMin"
        disabled={false}
        max={500}
        min={0}
        onChange={[Function]}
        placeholder={0}
        step={1}
        type="number"
        value={40}
      />
    </label>
    <span
      className="separator"
    >
      to
    </span>
    <label
      className="labelMax"
    >
      <input
        className="inputMax"
        disabled={false}
        max={500}
        min={0}
        onChange={[Function]}
        placeholder={500}
        step={1}
        type="number"
        value={460}
      />
    </label>
    <button
      className="submit"
      disabled={false}
      role="button"
    >
      Go
    </button>
  </fieldset>
</form>
`;
